# SLRC-2026

./: .gitignore  README.md  add_wifi.sh  install_dependencies.sh  plan.md  test_camera.py
media/: media
src/_archive/arm_pose_tuner/: setup.py
src/_archive/color_tracker_control/: package.xml  setup.py
src/_archive/robot_arm_moveit_config/: .setup_assistant
src/apriltag_decoder/: package.xml  setup.cfg  setup.py
src/apriltag_decoder/apriltag_decoder/: apriltag_decoder_node.py
src/arm_hardware/: CMakeLists.txt  package.xml  plugin.xml
src/arm_hardware/include/arm_hardware/: arm_hardware_interface.hpp
src/arm_hardware/scripts/: servo_node.py
src/arm_hardware/src/: arm_hardware_interface.cpp
src/arm_pose_tuner/: package.xml  setup.cfg
src/arm_pose_tuner/arm_pose_tuner/: pose_tuner.py
src/camera_feed/: package.xml  setup.py
src/camera_feed/camera_feed/: camera_feed_node.py  color_tracker_node.py
src/color_tracker_control/: setup.cfg
src/color_tracker_control/color_tracker_control/: color_tracker_node.py
src/mpu6050_ros2/: package.xml  setup.cfg  setup.py
src/mpu6050_ros2/mpu6050_ros2/: mpu6050_node.py
src/oled_display/: package.xml  setup.py
src/oled_display/oled_display/: oled_display_node.py
src/robocop_pkg/: README.md  package.xml  setup.cfg  setup.py
src/robocop_pkg/3D_file/: Part Studio 1.dae  Part Studio 1.gltf
src/robocop_pkg/launch/: robocop_launch.py  robocop_launch1.py  (+4 more)
src/robot_arm_bringup/: CMakeLists.txt
src/robot_arm_interfaces/: CMakeLists.txt  package.xml
src/robot_arm_moveit_config/: package.xml
src/robot_arm_v2/: CMakeLists.txt  package.xml
src/robot_arm_v2_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/robot_test/: package.xml  setup.py
src/rpi_arm_hardware/: CMakeLists.txt  package.xml  rpi_arm_hardware_plugin.xml
src/rpi_arm_hardware/include/rpi_arm_hardware/: rpi_arm_hardware_interface.hpp
src/rpi_arm_hardware/scripts/: pca9685_bridge.py
src/rpi_arm_hardware/src/: rpi_arm_hardware_interface.cpp
src/stepper_control/: package.xml  setup.py
src/tof_sensors/: package.xml  setup.cfg  setup.py
(+196 files in other folders)
